@@ -2,7 +2,7 @@ Package: momentuHMM
 Type: Package
 Title: Maximum Likelihood Analysis of Animal Movement Behavior Using Multivariate Hidden Markov Models
 Version: 1.4.3
-Date: 2018-07-10
+Date: 2018-07-11
 Depends:
     R (>= 2.10)
 Author: Brett McClintock, Theo Michelot
