@@ -166,6 +166,7 @@ importFrom(stats,rexp)
 importFrom(stats,rmultinom)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
+importFrom(stats,setNames)
 importFrom(stats,step)
 importFrom(stats,terms)
 importFrom(stats,terms.formula)
