@@ -1,14 +1,18 @@
-momentuHMM 1.4.3 2018-07-10
+momentuHMM 1.4.3 2018-07-11
 -----------------
 NEW FEATURES
 
 * betaCons argument added to fitHMM and MIfitHMM for specifying equality constraints on transition probability matrix parameters
+
+* retryParallel argument added to crawlWrap
 
 CHANGES
 
 * changed how fixPar and betaCons are handled when optimizing the likelihood; this should make optimization faster and more stable when these parameter constraints are used
 
 * %dorng% now used instead of %dopar%, thereby allowing for reproducible foreach loops when using parallel processing
+
+* cleaned up crawlWrap printing when retryFits>0 and retryParallel=FALSE
 
 
 momentuHMM 1.4.2 2018-06-19
